made blog cards fixed size and used overflow property

--- a/main.css
+++ b/main.css
@@ -1,26 +1,3 @@
-/*NAVIGATION BAR*/
-/*nav {
-	list-style: none;
-	background-color: darksalmon;
-	padding: 1%;
-	text-align: center;
-}
-
-nav li {
-	display: inline;
-	padding-right: 5%;
-}
-
-nav a:hover {
-	background-color: lightgreen;
-	color: darkgreen;
-}
-
-nav a:active {
-	padding-left: 5px;
-	padding-right: 5px;
-}
-*/
 /*BLOG PAGE*/
 .title {
 	text-align: center;
@@ -35,7 +12,9 @@ justify-content: center;
 
 .cards {
 	flex-wrap: wrap;
-	max-width: 25%;
 	border: 3px solid darkgray;
 	margin:	2%;
+	width: 400px;
+	height: 400px;
+	overflow: scroll;
 }
